test/tests/errors/error-div-zero-int.sm
// true
// false
/**/
/**/

program {
    var x = 5 / 0;
    output x;
}